<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/background_image_view" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitles.Title" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitles.SubTitle"
        android:layout_below="@id/title" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/subtitle" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/EditTextStyle"
            android:hint="@string/username_hint" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/EditTextStyle"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/ButtonStyle"
        android:layout_below="@id/editTextLayout"
        android:text="@string/login_button_label" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white" />

</RelativeLayout>