<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/background_image_view" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitles.Title" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitles.SubTitle"
        android:layout_below="@id/title" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/subtitle" >

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        style="@style/ButtonStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:text="@string/sign_up_button_label" />

</RelativeLayout>